# chess-action-space

./: .gitignore  .pre-commit-config.yaml  ContextTimer.py  README.md  main.py  occupied_and_attack_indices.py  pyproject.toml  test.py
.github/workflows/: pytest.yml
.hooks/: typecheck.sh
src/: __init__.py  test.py
src/chess_action_space/: __init__.py  explicit.py  py.typed  utils.py
src/test/: test.py
